--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
-  border: 2px solid red;
+  border: 2px solid rebeccapurple;
 }
 
 .page-header {
@@ -22,77 +22,58 @@ body {
 .container{
   display: flex;
   align-items: center;
-  justify-content:  center;
-  border: 1px solid yellow;
+  justify-content: center;
   height: 90vh;
   min-width: 300px;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+  border: 1px solid yellowgreen;
 }
 
-/*.search-form {
-  display: block;
-  padding: 10px;
-  min-width: 300px;
-  max-width: 600px;
-  border: 1px solid pink;
-}*/
+.advanced{
+  align-items: start;
+  justify-content: flex-start;
+  min-width: none;
+  max-width: none;
+  margin: 20px;
+  border: 1px solid darkorange;
+}
 
 form{
-  border: 1px solid seagreen;
   padding: 10px;
   width: 100%;
+  text-align: center;
 }
 
-.input{ 
+.input-border{ 
   width: 100%;
-  height: 30px;
+  height: 44px;
   border: 1px solid #aaaaaa;
-  /*border-radius: 24px;*/
-  margin-bottom: 10px;
+  border-radius: 24px;
+  margin-bottom: 20px;
   padding: 5px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input{
+  width:  100%;
+  height: 46px;
+  padding: 0 20px;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 .button {
   width: auto;
-  height: 30px;
+  height: 35px;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  margin: 0 4px;
+  padding: 0 16px;
 }
-/*
-.form-advanced {
-  width: 500px;
-  height: 20px;
-  border: 1px solid #aaaaaa;
-  margin: 40px;
-}
-
-.button-advanced {
-  width: auto;
-  height: 30px;
-}
-
-.advanced-search-form {
-  margin: 50px 20px;
-  max-width: 1408px;
-  text-align: left;
-}
-
-form {
-    display: grid;
-    grid-template-columns: 200px 550px;
-    text-align: left;
-}
-
-.label {
-    vertical-align: middle;
-}
-
-.input {
-    text-align: right;
-}
-
-div input {
-    width: 500px;
-    height: 20px;
-    vertical-align: middle;
-}*/
